Bouton PDF done